# tutorial-c-verse-client-simple

./: CMakeLists.txt  LICENSE  README.md  verse_client.c
